[Employment][Sean]test: add unit tests for add employee method in employee service